test/features/errors/runtime/e3006_await_failed.spl
# E3006: Await Failed

Feature: E3006 - Await Failed
  As a Simple runtime
  I want to detect failed await operations
  So that async errors are caught

  Background:
    Given I have the Simple runtime

  Scenario: Await on failed promise
    When I run:
      '''
      async fn failing_async():
        panic("Operation failed")

      async fn test():
        val result = await failing_async()  # Runtime error
      '''
    Then I should see runtime error E3006
    And the error message should be "await failed: {error}"
    And the label should indicate "await failed here"
    And the help should suggest "check the promise or async operation"

  Scenario: Successful await
    When I run:
      '''
      async fn successful_async() -> i32:
        42

      async fn test():
        val result = await successful_async()  # OK
      '''
    Then execution should succeed

  Scenario: Korean language error
    Given I set runtime language to "ko"
    When I run:
      '''
      async fn failing():
        panic("Failed")

      async fn test():
        await failing()
      '''
    Then I should see runtime error E3006
    And the error message should contain "await 실패"
